Missed one hardcoded install location.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@2983 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -140,7 +140,7 @@ foreach(format ${formats})
     ${CMAKE_BINARY_DIR}/include/openbabel/babelconfig.h)
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
   install(TARGETS ${format}
-                  RUNTIME DESTINATION bin
+                  RUNTIME DESTINATION ${BIN_INSTALL_DIR}
                   LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR}
                   ARCHIVE DESTINATION ${PLUGIN_INSTALL_DIR})
   set_target_properties(${format} PROPERTIES
