Add initial code for 3D -> Stereo conversion
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3239 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,7 +69,12 @@ set(tests
     tetraplanar
 #    squareplanar
     cistrans
+    stereoperception
    )
+                
+
+cmake_policy(SET CMP0005 NEW) # needed for line below (escapes value)
+add_definitions( -DTESTDATADIR="${CMAKE_SOURCE_DIR}/test/files/" )
 
 foreach(test ${tests})
   add_executable(${test}test ${test}test.cpp)
