Continue working on stereochemistry
Conflicts:

	test/CMakeLists.txt

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3240 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,34 @@
 cmake_policy(SET CMP0005 NEW) # needed for line below (escapes value)
 add_definitions( -DTESTDATADIR="${CMAKE_SOURCE_DIR}/test/files/" )
 
+# define TESTDATADIR for tests that need input files
+cmake_policy(SET CMP0005 NEW) # needed for line below (escapes value)
+add_definitions( -DTESTDATADIR="${CMAKE_SOURCE_DIR}/test/files/" )
+
 ############################################################
-#  neew tests using obtest.h
+#  new tests using obtest.h
 ############################################################
 
+set(tests
+    uniqueid
+    smiles
+    stereo
+    tetrahedral
+    tetranonplanar
+    tetraplanar
+#    squareplanar
+    cistrans
+    stereoperception
+   )
+
+foreach(test ${tests})
+  add_executable(${test}test ${test}test.cpp)
+  target_link_libraries(${test}test ${BABEL_LIBRARY})
+  add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test}test)
+  set_tests_properties(${test}_Test PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed")
+endforeach(test ${tests})
+
+ 
 ############################################################
 #  old tests using "not ok"
 ############################################################
@@ -59,26 +83,3 @@ install(TARGETS roundtrip
                 LIBRARY DESTINATION lib
                 ARCHIVE DESTINATION lib
 )
-
-set(tests
-    uniqueid
-    smiles
-    stereo
-    tetrahedral
-    tetranonplanar
-    tetraplanar
-#    squareplanar
-    cistrans
-    stereoperception
-   )
-                
-
-cmake_policy(SET CMP0005 NEW) # needed for line below (escapes value)
-add_definitions( -DTESTDATADIR="${CMAKE_SOURCE_DIR}/test/files/" )
-
-foreach(test ${tests})
-  add_executable(${test}test ${test}test.cpp)
-  target_link_libraries(${test}test ${BABEL_LIBRARY})
-  add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test}test)
-  set_tests_properties(${test}_Test PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed")
-endforeach(test ${tests})
