Various Stereochemistry related changes 1) Start removing obsolete methods from OBAtom/OBBond 2) Use new stereo code for MDL format (mol, sdf) 3) Currently intergrating with OBGraphSym...
Conflicts:

	include/openbabel/bond.h
	src/formats/mdlformat.cpp   (smiles & mdl format will be merged at the end)
	src/formats/mmcifformat.cpp

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3243 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(stereo_srcs
     stereo/cistrans.cpp
     stereo/tetrahedral.cpp
     stereo/perception.cpp
+    stereo/facade.cpp
 )
 
 set(openbabel_srcs
@@ -64,6 +65,7 @@ set(openbabel_srcs
     forcefield.cpp
     format.cpp
     generic.cpp
+    graphsym.cpp
     grid.cpp
     griddata.cpp
     kekulize.cpp
