Fix cmake error in top level CMakeLists.txt (Using cmake 2.6.2 here)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3651 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,10 +228,10 @@ CACHE BOOL "Intel Compiler support for -fvisibility-inlines-hidden")
   
   # define WITH_SSE2 to enable the SSE2 instruction set.
   # Available on Pentium 4, Athlon 64, and newer CPUs.
-  if((CMAKE_SIZEOF_VOID_P EQUAL 8) OR WITH_SSE2)
+  if(CMAKE_SIZEOF_VOID_P EQUAL 8 OR WITH_SSE2)
     message(STATUS "Enabling the SSE2 instruction set")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
-  endif((CMAKE_SIZEOF_VOID_P EQUAL 8) OR WITH_SSE2)
+  endif(CMAKE_SIZEOF_VOID_P EQUAL 8 OR WITH_SSE2)
 endif(${CMAKE_CXX_COMPILER_ID} MATCHES Intel AND UNIX)
 
 if(MSVC90)
