--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -46,7 +46,8 @@ add_custom_command(OUTPUT openbabel-python.cpp openbabel.py
 
 if(NOT WIN32)
     add_custom_target(_openbabel ALL
-        COMMAND ${PYTHON_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/python/setup.py build
+        COMMAND ${CMAKE_COMMAND} -E create_symlink ${openbabel_SOURCE_DIR}/scripts/python ${openbabel_BINARY_DIR}/scripts/python
+        COMMAND ${PYTHON_EXECUTABLE} ${openbabel_BINARY_DIR}/scripts/python/setup.py build
         DEPENDS openbabel-python.cpp
         WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts
     )
