* include/openbabel/partialcharge.h, src/partialcharges.cpp,         src/charges/: New plugin type to assign partial charges. First         examples are MMFF94 and Gasteiger. Nothing new, but more to come.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3675 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,11 @@
 set(SOVERSION 4)
 set(LIBRARY_VERSION 4.0.0)
 
+set(charges
+        charges/gasteiger.cpp
+        charges/mmff94.cpp
+)
+
 set(depict_srcs
     depict/depict.cpp
     depict/svgpainter.cpp
@@ -89,6 +94,7 @@ set(openbabel_srcs
     op.cpp
     ops.cpp
     parsmart.cpp
+    partialcharge.cpp
     patty.cpp
     phmodel.cpp
     plugin.cpp
@@ -127,10 +133,11 @@ set(openbabel_library_srcs
 if(NOT MSVC)
    set(openbabel_library_srcs
 	   ${openbabel_library_srcs}
+     ${charges}
 	   ${descriptors}
 	   ${fingerprints}
-           ${forcefields}
-           ${ops}
+     ${forcefields}
+     ${ops}
 	   )
 endif(NOT MSVC)
 add_library(${BABEL_LIBRARY} ${BUILD_TYPE}
