Slight restructuring of partial charge models, now OBChargeModel.
Added contribution from Jiahao Chen:
        * src/charges/qeq.h, src/charges/qeq.cpp:
        Added implementation of QEq charge model (Rappe and Goddard, 1991) 

        * src/charges/qtpie.h, src/charges/qtpie.cpp:
        Added implementation of QTPIE charge model (Chen and Martinez, 2007;
        2008)

        * src/atom.cpp: added comments to show how these new charge models can
        be called from within current OpenBabel code
           
        * CMakeLists.txt: added charge models and compile flags for Eigen2
        library (variables copied from Avogadro source tree)



git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3692 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -289,6 +289,14 @@ include_directories(${openbabel_BINARY_DIR}/include
                     ${openbabel_SOURCE_DIR}/include
 )
 
+#cjh
+find_package(Eigen2) # find and setup Eigen2
+if (EIGEN2_FOUND)
+add_definitions (-DHAVE_EIGEN2)
+include_directories(${EIGEN2_INCLUDE_DIR})
+endif(EIGEN2_FOUND)
+#cjh
+
 add_subdirectory(include)
 add_subdirectory(data)
 add_subdirectory(doc)
@@ -330,3 +338,4 @@ endif(ENABLE_PYTHON)
 
 # A minimal build with just two formats (SMI, SDF) useful for developers
 option(MINIMAL_BUILD "Disable full build" OFF)
+
