* CMakeLists.txt, src/CMakeLists.txt: Re-enable support for Cygwin. I 	just needed to change Cygwin to use dlhandler_unix.cpp instead of 	dlhandler_win32.cpp. (Note to self: need to sort out Mingw now, and 	then remove Cygwin specific code from dlhandler_win32.cpp
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3742 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,15 +120,15 @@ set(openbabel_srcs
 )
 
 if(BUILD_SHARED)
-  if(WIN32)
+  if(MSVC)
     set(openbabel_srcs ${openbabel_srcs}
         dlhandler_win32.cpp
         )
-  else(WIN32)
+  else(MSVC)
     set(openbabel_srcs ${openbabel_srcs}
         dlhandler_unix.cpp
         )
-  endif(WIN32)
+  endif(MSVC)
 endif(BUILD_SHARED)
 
 set(openbabel_library_srcs
